@@ -8,7 +8,8 @@ BUILD_ARGS="$@"
 #   cowbird        alpha-dec-osf4.0
 #   grundoon       sparc-sun-sunos4.1.3
 # * hepzibah       freebsd-2.2.5
-# * pogo           sparc-sun-solaris2.6
+# * malarky        sparc-sun-solaris2.7
+# * pogo           sparc-sun-solaris2.7
 # * porkypine      mips-dec-ultrix4.4
 # * rackety        sparc-sun-sunos4.1.3/cc
 # * snavely        hppa1.1-hp-hpux10.20
@@ -23,9 +24,9 @@ case "$c_d" in
     ;;
 esac
 
-for i in  churchy hepzibah pogo porkypine rackety snavely
+for i in  churchy hepzibah malarky pogo porkypine rackety snavely
 do
     echo $i
-    # Perhaps we should call build with --enable-parse-clocks
-    ssh $i "cd $c_d ; ./build $BUILD_ARGS" &
+    ssh $i "cd $c_d ; ./build --enable-parse-clocks $BUILD_ARGS" &
+    ssh $i "cd $c_d ; ./build --enable-parse-clocks --without-rsaref $BUILD_ARGS" &
 done
